noinst_LIBRARIES=libdatawriters.a

libdatawriters_a_SOURCES = DataWriter.hh \
	DataWriter.cc \
	AsciiDataWriter.hh \
	AsciiDataWriter.cc \
	MatlabDataWriter.hh \
	MatlabDataWriter.cc \
	NetCDFDataWriter.hh \
	NetCDFDataWriter.cc \
	HdfDataWriter.hh \
	Hdf5DataWriter.hh
#	PyDataWriter.hh \
#	PyDataWriter.cc

