noinst_LIBRARIES=libexcitations.a

libexcitations_a_SOURCES = Excitation.hh \
	Excitation.cc \
	WindowedExcitation.hh \
	WindowedExcitation.cc \
	BartlettExcitation.hh \
	BartlettExcitation.cc \
	GaussWindExcitation.hh \
	GaussWindExcitation.cc \
	WaveguideExcitation.hh \
	WaveguideExcitation.cc \
	TotalScattered.hh \
	TotalScattered.cc

