noinst_LIBRARIES=libresults.a

libresults_a_SOURCES = 	Result.hh \
	BlockResult.hh \
	BlockResult.cc \
	PointResult.hh \
	PointResult.cc \
	PlaneResult.hh \
	PlaneResult.cc \
	FarfieldResult.cc \
	FarfieldResult.hh \
	DFTResult.hh \
	DFTResult.cc \
	PointDFTResult.hh \
	PointDFTResult.cc \
	SourceTimeResult.hh \
	SourceTimeResult.cc \
	SourceDFTResult.hh \
	SourceDFTResult.cc \
	PowerResult.hh \
	PowerResult.cc \
	FakeResult.hh \
	FakeResult.cc
