noinst_LIBRARIES=libresults.a

libresults_a_SOURCES = 	Result.hh \
	BlockResult.hh \
	BlockResult.cc \
	PointResult.hh \
	PointResult.cc \
	PlaneResult.hh \
	PlaneResult.cc \
	DFTResult.hh \
	DFTResult.cc \
	PointDFTResult.hh \
	PointDFTResult.cc \
	SourceTimeResult.hh \
	SourceTimeResult.cc \
	SourceDFTResult.hh \
	SourceDFTResult.cc \
	PowerResult.hh \
	PowerResult.cc \
	FakeResult.hh \
	FakeResult.cc \
	SurfaceCurrentResult.hh \
	SurfaceCurrentResult.cc \
	GridResult.hh \
	GridResult.cc \
	FarfieldResult2.hh \
	FarfieldResult2.cc

# Jan's Farfield: 
#	FarfieldResult.cc \
#	FarfieldResult.hh
