noinst_LIBRARIES=libresults.a

libresults_a_SOURCES = 	Result.hh \
	BlockResult.hh \
	BlockResult.cc \
	PointResult.hh \
	PointResult.cc \
	PlaneResult.hh \
	PlaneResult.cc \
	DFTResult.hh \
	DFTResult.cc \
	PointDFTResult.hh \
	PointDFTResult.cc \
	SignalTimeResult.hh \
	SignalTimeResult.cc \
	SignalDFTResult.hh \
	SignalDFTResult.cc \
	FakeResult.hh \
	FakeResult.cc \
	PowerResult.hh \
	PowerResult.cc \
	AvgPowerResult.hh \
	AvgPowerResult.cc \
	SurfaceCurrentResult.hh \
	SurfaceCurrentResult.cc \
	GridResult.hh \
	GridResult.cc \
	FarfieldResult2.hh \
	FarfieldResult2.cc \
	FarfieldResult.cc \
	FarfieldResult.hh \
	WindowedExResult.hh \
	WindowedExResult.cc \
	PropertiesResult.hh \
	PropertiesResult.cc

